tests/fixtures/errors/arg_type_mismatch.z
# E0300: an argument whose type does not match the declared parameter.
f: function {a: i64} is {}
main: function is {
    f a: "x"
}
